--- a/SITE_V1/footer.css
+++ b/SITE_V1/footer.css
@@ -5,7 +5,7 @@
 	Date Creation: 	04/08/2017;
 */
 
-#corps footer{
+footer{
 	
 	display : block;
 	margin: auto;
@@ -14,7 +14,7 @@
 	text-align : right;
 }
 
-#corps footer  a img{
+footer  a img{
 	width: 64px;
 	height: auto;
 	margin-left: 7px;
@@ -23,7 +23,20 @@
 	opacity: 0.7;
 }
 
+.OptionGear{
+	display : block;
+	margin : auto;
+	height : 100%;
+	width: 100%;
+	text-align: center;
+}
 
-#corps footer img:hover{
+.OptionGear img{
+	height: 32px;
+	width: 32px;
+}
+
+
+footer img:hover{
 	opacity : 1;
 }
