--- a/SITE_V1/footer.css
+++ b/SITE_V1/footer.css
@@ -4,6 +4,13 @@
 	Auteur: Nathan ARAGO;
 	Date Creation: 	04/08/2017;
 */
+body{
+	overflow-x: hidden;
+}
+
+a{
+	text-decoration: none;
+}
 
 footer{
 	
@@ -26,16 +33,17 @@ footer  a img{
 .OptionGear{
 	display : block;
 	margin : auto;
-	height : 100%;
-	width: 100%;
+	height : 32px;
+	width:  32px;
+	padding-bottom: 10px;
 	text-align: center;
 }
 
 .OptionGear img{
+	margin: auto;
 	height: 32px;
 	width: 32px;
 }
-
 
 footer img:hover{
 	opacity : 1;
