--- a/SITE_V1/zone_administrateur.css
+++ b/SITE_V1/zone_administrateur.css
@@ -1,5 +1,44 @@
 .auth_error{
 	color: red;
+	font-family: 'Arial';
+	font-size: 12px;
 }
 
-form 
+form{
+	border: solid rgba(231,190,130,0.5) 2px;
+	border-radius: 20px;
+	width: 250px;
+	display: block;
+	margin: auto;
+	text-align: center;
+}
+
+form input{
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+form input[type="text"],input[type="password"]{
+	border-bottom: solid rgba(231,190,130,0.5) 2px;
+}
+
+form input[type="submit"]{
+	font-family: 'Police1','Police2';
+	padding: 5px;
+	border: solid rgba(231,190,130,0.5) 2px;
+	border-radius: 5px; 
+}
+
+form input[type="submit"]:hover{
+	background-color: #FFF;
+	-webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+}
+
+form input[type="submit"]:active{
+	background-color: #FFF;
+	-webkit-box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.75);
+	box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.75);
+}
