--- a/SITE_V1/header.css
+++ b/SITE_V1/header.css
@@ -43,7 +43,7 @@ header .logo{
 }
 
 input[type=checkbox] + label{
-	background: url("images/menu_icon.png") no-repeat;
+	background: url("icons/menu_icon.png") no-repeat;
 	background-size: 0%;
 	opacity: 0.7;
 	width: 64px;
