--- a/SITE_V1/header.css
+++ b/SITE_V1/header.css
@@ -35,11 +35,34 @@ body{
 	color: #2043bf;
 }
 
+header{
+	display: block;
+	margin: auto;
+	width: 100%;
+	text-align: center;
+	background-image: url('icons/bgV1.png');
+	background-attachment: cover;
+}
+ header h1{
+ 	display: block;
+ 	margin: auto;
+ 	margin-bottom: 50px;
+	font-size : 34px;
+	background-color: #F8EAFA;
+	width: 100%;
+	height: auto;
+}
+
 header .logo{
 	display: block;
 	margin: auto;
-	width: 300px;
-	text-align : center;
+	height: auto;
+	width: 600px;
+}
+
+header .logo img{
+	display: block;
+	margin: 0px;
 }
 
 input[type=checkbox] + label{
@@ -74,7 +97,7 @@ input[type=checkbox] {
 	width : 100%;
 	height: 0px;
 	margin : auto;
-	margin-top : -10px;
+	margin-top : 0px;
 	overflow: hidden;
 	
 }
@@ -89,10 +112,10 @@ input[type=checkbox] {
 	font-size: 48px;
 	transition :all 0.5s ease;
 	background-color: #FFF;
-		-webkit-transition: all 0.5s ease;
+	-webkit-transition: all 0.5s ease;
 	-webkit-box-shadow: 0px 36px 62px -24px rgba(0,0,0,1);
-		-moz-box-shadow: 0px 36px 62px -24px rgba(0,0,0,1);
-		box-shadow: 0px 36px 62px -24px rgba(0,0,0,1);
+	-moz-box-shadow: 0px 36px 62px -24px rgba(0,0,0,1);
+	box-shadow: 0px 36px 62px -24px rgba(0,0,0,1);
 }
 
 .menu_mobil li{
